--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==43.0.1
 Django==5.1.1
 django-allauth==65.0.2
 django-crispy-forms==2.3
+django-environ==0.11.2
 idna==3.10
 oauthlib==3.2.2
 pillow==11.0.0
