--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,41 @@
+amqp==5.3.1
 asgiref==3.8.1
+async-timeout==5.0.1
+billiard==4.2.1
+celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 crispy-bootstrap5==2024.10
+cron-descriptor==1.4.5
 cryptography==43.0.1
 Django==5.1.1
 django-allauth==65.0.2
+django-celery-beat==2.7.0
 django-crispy-forms==2.3
 django-environ==0.11.2
+django-timezone-field==7.1
 idna==3.10
+kombu==5.4.2
 oauthlib==3.2.2
 pillow==11.0.0
+prompt_toolkit==3.0.50
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
+redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.17.0
 sqlparse==0.5.1
 tzdata==2024.2
 urllib3==2.2.3
+vine==5.1.0
+wcwidth==0.2.13
