--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,11 @@ django-celery-beat==2.7.0
 django-crispy-forms==2.3
 django-environ==0.11.2
 django-timezone-field==7.1
+gunicorn==23.0.0
 idna==3.10
 kombu==5.4.2
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.0.0
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
