--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,79 @@
+alembic==1.17.2
 amqp==5.3.1
-asgiref==3.8.1
+asgiref==3.7.2
 async-timeout==5.0.1
 billiard==4.2.1
+blinker==1.9.0
 celery==5.4.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
-crispy-bootstrap5==2024.10
+crispy-bootstrap5==2023.10
 cron-descriptor==1.4.5
-cryptography==43.0.1
-Django==5.1.1
+cryptography==41.0.7
+defusedxml==0.7.1
+dj-database-url==2.1.0
+Django==4.2
 django-allauth==65.0.2
 django-anymail==13.0
 django-celery-beat==2.7.0
-django-crispy-forms==2.3
+django-crispy-forms==2.1
 django-environ==0.11.2
+django-filter==24.3
+django-google-translate @ git+https://github.com/ndmichael/google-translator.git@6b999db8b1039d842792bcf48f5f4f9951a5401c
+django-heroku==0.3.1
 django-redis==5.4.0
+django-smart-selects==1.6.0
 django-timezone-field==7.1
-gunicorn==23.0.0
-idna==3.10
+dnspython==2.8.0
+email_validator==2.2.0
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.3.0
+gunicorn==21.2.0
+idna==3.6
+itsdangerous==2.2.0
+Jinja2==3.1.6
 kombu==5.4.2
+Mako==1.3.10
+MarkupSafe==3.0.3
+mypy==1.18.2
+mypy_extensions==1.1.0
 oauthlib==3.2.2
-packaging==24.2
-pillow==11.0.0
+packaging==23.2
+pathspec==0.12.1
+Pillow==10.1.0
 prompt_toolkit==3.0.50
-psycopg2-binary==2.9.10
-pycparser==2.22
-PyJWT==2.9.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycparser==2.21
+PyJWT==2.8.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python3-openid==3.2.0
 redis==5.2.1
-requests==2.32.3
-requests-oauthlib==2.0.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+resend==2.21.0
+setuptools==80.9.0
 six==1.17.0
-sqlparse==0.5.1
-tzdata==2024.2
-urllib3==2.2.3
+SQLAlchemy==2.0.45
+sqlparse==0.4.4
+stripe==11.1.0
+typing_extensions==4.15.0
+tzdata==2023.4
+urllib3==2.1.0
 vine==5.1.0
 wcwidth==0.2.13
-git+https://github.com/ndmichael/google-translator.git
+Werkzeug==3.1.4
+whitenoise==6.6.0
+WTForms==3.2.1
