--- a/requirements.txt
+++ b/requirements.txt
@@ -52,8 +52,7 @@ packaging==23.2
 pathspec==0.12.1
 Pillow==10.1.0
 prompt_toolkit==3.0.50
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1
 pycparser==2.21
 PyJWT==2.8.0
 python-crontab==3.2.0
